# yes-man-ai

./: .gitignore  CLAUDE.md
.claude/: settings.local.json
voice-training/: README.md  pyproject.toml  requirements.txt
voice-training/scripts/: create_metadata.py  extract_audio.py  prepare_data.py
voice-training/tts/: README_TEST.md  finetune.py  quick_test.py  test_voice.py  train.py  train_simple.py
